# coop

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Dockerfile  LAUNCH.md  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
contrib/: coop.env.example
contrib/systemd/: coopd.service
crates/coop-cli/: Cargo.toml
crates/coop-cli/src/: main.rs
crates/coopd/: Cargo.toml
crates/coopd-brain/: Cargo.toml
crates/coopd-brain/src/: anthropic.rs  cached.rs  fallback.rs  lib.rs  openai.rs  router.rs  routing.rs  sse.rs
crates/coopd-core/: Cargo.toml
crates/coopd-core/src/: brain.rs  delegation.rs  error.rs  hen.rs  ids.rs  job.rs  lib.rs  manifest.rs  memory.rs  net.rs  orchestrator.rs  remote.rs  task.rs  tool.rs
crates/coopd-discord/: Cargo.toml
crates/coopd-discord/src/: lib.rs
crates/coopd-storage/: Cargo.toml
crates/coopd-storage/src/: lib.rs
crates/coopd-tools/: Cargo.toml
crates/coopd-tools/src/: bash.rs  delegate.rs  file_read.rs  file_write.rs  http.rs  lib.rs  safe_net.rs  safe_path.rs  sandbox.rs
crates/coopd-vault/: Cargo.toml
crates/coopd-vault/src/: azure.rs  lib.rs
crates/coopd/src/: api.rs  auth.rs  brain_factory.rs  discord_supervisor.rs  location.rs  main.rs  orchestrator.rs  runner.rs  safe_origin.rs  session.rs  shell.rs  tasks.rs  ui.rs
crates/coopd/src/ui/: chat-preview.html  farm.html  login.html
docs/: configuration.md  delegation.md  deployment.md  discord.md  memory.md  net-isolation.md  quickstart.md
docs/demo/: coop-demo.tape
docs/design/: remote-farmhand.md
examples/: aria.yaml  local-ollama.yaml  manager.yaml
packaging/homebrew/: coop.rb
scripts/: e2e.sh  farm-demo.sh  install.sh
