[workspace]
resolver = "2"
members = [
    "crates/coopd",
    "crates/coopd-core",
    "crates/coopd-storage",
    "crates/coopd-vault",
    "crates/coopd-tools",
    "crates/coopd-brain",
    "crates/coopd-discord",
    "crates/coop-cli",
]
# Note: the cross-Coop market layer (`coopd-market`) is intentionally NOT part
# of this workspace. It lives in a separate proprietary repo (`coop-market`)
# per the open-core split. See AGENTS.md for the boundary contract.

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/dcluomax/coop"
homepage = "https://coop.network"
authors = ["The Coop Authors"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Allow a few `clippy::all` lints that flag pre-existing structural choices
# (large error enums, etc.) and would require Box-ing wide swaths of the API
# to silence. Revisit when the error story is redesigned post-v0.1.
result_large_err = "allow"
large_enum_variant = "allow"
derivable_impls = "allow"
# `pedantic` deliberately omitted: new rustc releases regularly add pedantic
# lints that break CI without indicating real bugs. Re-enable per-crate if a
# crate maintainer wants the stricter baseline.
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Hand-picked pedantic lints that catch real perf / clarity / correctness
# wins without the noise of full `pedantic`.
redundant_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
unnecessary_wraps = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
match_same_arms = "warn"
cloned_instead_of_copied = "warn"

[workspace.dependencies]
# Workspace-internal
coopd-core = { path = "crates/coopd-core", version = "0.1.0" }
coopd-storage = { path = "crates/coopd-storage", version = "0.1.0" }
coopd-vault = { path = "crates/coopd-vault", version = "0.1.0" }
coopd-tools = { path = "crates/coopd-tools", version = "0.1.0" }
coopd-brain = { path = "crates/coopd-brain", version = "0.1.0" }
coopd-discord = { path = "crates/coopd-discord", version = "0.1.0" }
# coopd-market is intentionally NOT a workspace member (open-core: proprietary).
# See crates/coopd/Cargo.toml for its optional, sibling-path declaration.

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# HTTP / API
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Storage
redb = "2"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
rand = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time = { version = "0.3", features = ["serde", "serde-well-known", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"
bytes = "1"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
if-addrs = "0.13"
portable-pty = "0.9"

# Testing
mockall = "0.13"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
