[package]
name = "coopd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and orchestration for the Coop agent farm OS"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
