[package]
name = "coopd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Coop agent farm daemon"

[lints]
workspace = true

[[bin]]
name = "coopd"
path = "src/main.rs"

[dependencies]
coopd-core = { workspace = true }
coopd-storage = { workspace = true }
coopd-vault = { workspace = true }
coopd-tools = { workspace = true }
coopd-brain = { workspace = true }
coopd-discord = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
portable-pty = { workspace = true }
if-addrs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
